# gravel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  SECURITY.md  gravel_prd_supplement_s1.docx  gravel_prd_supplement_s2.docx  gravel_prd_v2.docx  pyproject.toml
.github/workflows/: ci.yml  docs.yml  wheels.yml
bench/: CMakeLists.txt  bench_fragility.cpp  bench_scaling.cpp
bench/baselines/: perf_baseline.json  routing_performance.md
cli/: CMakeLists.txt  args.h  cmd_batch_fragility.cpp  cmd_build_ch.cpp  cmd_build_graph.cpp  cmd_county_fragility.cpp  cmd_county_index.cpp  cmd_location_fragility.cpp  cmd_matrix.cpp  cmd_progressive_fragility.cpp  cmd_route.cpp  cmd_route_fragility.cpp  cmd_simplify.cpp  cmd_snap.cpp  cmd_validate.cpp  main.cpp
cmake/: Dependencies.cmake  OsmiumDetect.cmake
conda-recipe/: README.md  meta.yaml
conda-recipe/patches/: 01-pybind11-spectra-find-package.patch
data/sample-results/: README.md  county_isolation_fragility.csv  inter_county_fragility.csv
docs/: Makefile  PRD.md  PUBLISHING.md  conf.py  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: python.md
examples/: README.md
examples/cpp/: 01_basic_routing.cpp  02_location_fragility.cpp
examples/python/: 01_basic_routing.py  02_location_fragility.py  03_county_analysis.py
include/gravel/: gravel.h
include/gravel/analysis/: accessibility.h  algebraic_connectivity.h  analysis_context.h  betweenness.h  closure_risk.h  county_fragility.h  kirchhoff.h  laplacian.h  location_fragility.h  natural_connectivity.h  od_sampling.h  progressive_fragility.h  scenario_fragility.h  tiled_fragility.h  uncertainty.h
include/gravel/ch/: blocked_ch_query.h  ch_query.h  ch_serialization.h  contraction.h  landmarks.h  shortcut_index.h
include/gravel/core/: array_graph.h  constants.h  csv_graph.h  dijkstra.h  edge_labels.h  edge_metadata.h  edge_sampler.h  four_heap.h  geo_math.h  graph_interface.h  graph_serialization.h  hilbert_order.h  incremental_sssp.h  lca.h  priority_queue.h  subgraph.h  types.h
include/gravel/fragility/: bernstein_approx.h  fragility_filter.h  fragility_result.h  hershberger_suri.h  inter_region_fragility.h  route_fragility.h  via_path.h
include/gravel/geo/: border_edges.h  boundary_nodes.h  edge_confidence.h  elevation.h  geography_skeleton.h  geojson_loader.h  graph_coarsening.h  osm_graph.h  region_assignment.h  region_serialization.h
include/gravel/io/: arrow_output.h  binary_format.h  geojson_output.h  mapped_file.h
include/gravel/simplify/: bridge_classification.h  bridges.h  reduced_graph.h  simplify.h
include/gravel/snap/: edge_index.h  snapper.h
include/gravel/us/: admin_levels.h  cbsa_assignment.h  county_assignment.h  fips_crosswalk.h  tiger_loader.h
include/gravel/validation/: fragility_validator.h  synthetic_graphs.h  validator.h
python/: CMakeLists.txt  bindings.cpp
python/gravel/: __init__.py
python/tests/: test_basic.py
scripts/: README.md  benchmark_routing.py  geofabrik_urls.py  national_fragility.py  national_inter_county.py  perf_check.py  pgo_build.sh  state_names.py  test_appalachia.cpp  visualize_results.py
src/analysis/: accessibility.cpp  algebraic_connectivity.cpp  analysis_context.cpp  betweenness.cpp  closure_risk.cpp  county_fragility.cpp  kirchhoff.cpp  laplacian.cpp  location_fragility.cpp  natural_connectivity.cpp  od_sampling.cpp  progressive_fragility.cpp  progressive_fragility_greedy.cpp  progressive_fragility_mc.cpp  progressive_sssp.h  scenario_fragility.cpp  tiled_fragility.cpp  uncertainty.cpp
src/ch/: blocked_ch_query.cpp  ch_query.cpp  ch_serialization.cpp  contraction.cpp  landmarks.cpp  shortcut_index.cpp
src/core/: array_graph.cpp  csv_graph.cpp  dijkstra.cpp  edge_labels.cpp  edge_sampler.cpp  four_heap.cpp  geo_math.cpp  graph_serialization.cpp  hilbert_order.cpp  incremental_sssp.cpp  lca.cpp  priority_queue.cpp  subgraph.cpp
src/fragility/: bernstein_approx.cpp  fragility_filter.cpp  hershberger_suri.cpp  inter_region_fragility.cpp  route_fragility.cpp  via_path.cpp
src/geo/: border_edges.cpp  boundary_nodes.cpp  edge_confidence.cpp  elevation.cpp  geography_skeleton.cpp  geojson_loader.cpp  graph_coarsening.cpp  osm_graph.cpp  region_assignment.cpp  region_serialization.cpp
src/io/: arrow_output.cpp  geojson_output.cpp  mapped_file.cpp
src/simplify/: bridge_classification.cpp  bridges.cpp  ch_pruning.cpp  degradation.cpp  degree2.cpp  reduced_graph.cpp  simplify.cpp
src/snap/: edge_index.cpp  snapper.cpp
src/validation/: fragility_validator.cpp  synthetic_graphs.cpp  validator.cpp
tests/: CMakeLists.txt  test_accessibility.cpp  test_algebraic_connectivity.cpp  test_array_graph.cpp  test_bernstein.cpp  test_betweenness.cpp  test_blocked_ch_query.cpp  test_boundary_contraction.cpp  test_bridges.cpp  test_ch_vs_dijkstra.cpp  test_closure_risk.cpp  test_county_fragility.cpp  test_csv_graph.cpp  test_deferred_features.cpp  test_dijkstra.cpp  test_edge_sampler.cpp  test_elevation.cpp  test_four_heap.cpp  test_fragility_filter.cpp  test_geo_math.cpp  test_hershberger_suri.cpp  test_hilbert_order.cpp  test_incremental_sssp.cpp  test_inter_region.cpp  test_kirchhoff.cpp  test_landmarks.cpp  test_laplacian.cpp  test_location_fragility.cpp  test_natural_connectivity.cpp  test_od_sampling.cpp  test_output_formats.cpp  test_parallel_ch.cpp  test_performance_profile.cpp  test_priority_queue.cpp  test_progressive_fragility.cpp  test_real_osm.cpp  test_region_assignment.cpp  test_route_fragility.cpp  test_serialization.cpp  test_simplify.cpp  (+11 more)
tests/data/: small_graph.csv  wnc_counties.geojson
