[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "gravel-fragility"
version = "2.2.2"
description = "Fast road network fragility analysis with contraction hierarchies"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Robert Hoekstra", email = "rhoekstr@gmail.com" },
]
keywords = [
    "routing",
    "graph",
    "contraction-hierarchy",
    "road-network",
    "fragility",
    "isolation-analysis",
    "transportation",
    "disaster-resilience",
    "osm",
    "openstreetmap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.20",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
]
pipeline = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/rhoekstr/gravel"
Documentation = "https://rhoekstr.github.io/gravel/"
Repository = "https://github.com/rhoekstr/gravel"
Issues = "https://github.com/rhoekstr/gravel/issues"
Changelog = "https://github.com/rhoekstr/gravel/blob/main/CHANGELOG.md"
"Author Website" = "https://awrylabs.com/"

# ============================================================
# scikit-build-core configuration
# ============================================================

[tool.scikit-build]
wheel.packages = ["python/gravel"]
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
cmake.verbose = false
cmake.version = ">=3.24"

# Editable install settings: redirect imports to a persistent editable location
# so `pip install -e .` properly places _gravel.so alongside the gravel package.
editable.rebuild = true

[tool.scikit-build.cmake.define]
GRAVEL_BUILD_PYTHON = "ON"
GRAVEL_BUILD_CLI = "OFF"
GRAVEL_BUILD_TESTS = "OFF"
GRAVEL_BUILD_BENCH = "OFF"
# AUTO is the source-build-friendly default — builds gracefully with or
# without libosmium and emits a clear CMake status message either way.
# cibuildwheel explicitly installs libosmium before each wheel build and
# then passes GRAVEL_USE_OSMIUM=ON so wheel builds fail fast if the
# pre-install didn't happen (rather than silently shipping an OSM-less
# wheel because of a broken before-build hook).
GRAVEL_USE_OSMIUM = "AUTO"

# Source distribution: include everything needed to build from source
[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "cmake/**",
    "include/**",
    "src/**",
    "python/**",
    "tests/CMakeLists.txt",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "build/**",
    "output/**",
    "**/__pycache__/**",
    "**/*.pyc",
    ".github/**",
    "tests/data/**",
]

# ============================================================
# Ruff linting
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B",
]
ignore = [
    "E501",  # line too long (formatter enforces)
    "N803",  # argument name lowercase (we use FIPS, CH, etc.)
    "N806",  # variable in function lowercase
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports are intentional
"python/gravel/__init__.py" = ["F401"]
# Scripts need to mutate sys.path before importing gravel
"scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Pytest
# ============================================================

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"

# ============================================================
# cibuildwheel — binary wheel generation
# ============================================================

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]
# TOML literal string (single-quoted) so we can embed double-quotes
# without escaping. cmd.exe on Windows does not recognize single
# quotes as arg delimiters, so the Python -c argument must be
# double-quoted for the command to parse on all three platforms.
# Also assert HAS_OSM — every wheel shipped from CI must have OSM
# enabled (the before-all hooks install libosmium); if a wheel escapes
# CI without OSM, the test_command fails fast.
test-command = 'python -c "import gravel; assert gravel.HAS_OSM, \"OSM missing\"; print(gravel.__version__)"'

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# manylinux_2_17 (Rocky Linux 8) has zlib/bz2/expat headers pre-installed.
# libosmium + protozero are header-only C++ — clone a pinned release and
# drop headers under /usr/local/include where CMake's find_path picks
# them up. lz4-devel comes from the extras repo; its absence downgrades
# libosmium support (still functional, just no lz4-compressed PBF input).
before-all = """
yum install -y lz4-devel || true
cd /tmp
curl -sL https://github.com/osmcode/libosmium/archive/refs/tags/v2.20.0.tar.gz | tar xz
cp -r libosmium-2.20.0/include/osmium /usr/local/include/
curl -sL https://github.com/mapbox/protozero/archive/refs/tags/v1.7.1.tar.gz | tar xz
cp -r protozero-1.7.1/include/protozero /usr/local/include/
"""
environment = { CMAKE_ARGS = "-DGRAVEL_USE_OSMIUM=ON" }

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# std::filesystem requires macOS 10.15+. cibuildwheel's default of 10.9
# triggers "'exists' is unavailable" errors on the x86_64 wheels.
before-all = "brew install libosmium protozero lz4"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15", CMAKE_ARGS = "-DGRAVEL_USE_OSMIUM=ON" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# Pre-install C++ deps via vcpkg so CMake's find_package (enabled by
# FIND_PACKAGE_ARGS on our FetchContent_Declare entries) picks them up,
# bypassing git-clone over Windows runner networks which has shown
# multi-minute hangs for Eigen in particular. libosmium + protozero +
# runtime libs (zlib/expat/bz2/lz4) are all vcpkg ports.
before-all = "vcpkg install libosmium protozero zlib expat bzip2 lz4"
environment = { CMAKE_ARGS = "-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DGRAVEL_USE_OSMIUM=ON" }
